@@ -71,8 +71,8 @@ flatReplaceMethod <- function(model, index, value) {
 	return(flatNamespaceSearchReplace(model, index, value))
 }
 
-convertDatasets <- function(flatModel, defVars) {
-	flatModel@datasets <- lapply(flatModel@datasets, sortRawData, defVars)
+convertDatasets <- function(flatModel, defVars, modeloptions) {
+	flatModel@datasets <- lapply(flatModel@datasets, sortRawData, defVars, modeloptions)
 	flatModel@datasets <- lapply(flatModel@datasets, convertIntegerColumns)
 	return(flatModel)
 }
