@@ -3,6 +3,9 @@ trunk
 * checking for partial square bracket references on input
 * fixed error reporting for non-positive-definite covariances in FIML
 * implemented initial sorting-based speedup for FIML objectives
+* added 'No Sort Data' to mxOptions()
+* eliminated getOption('mxOptimizerOptions') and getOption('mxCheckpointOptions') 
+* added getOption('mxOptions')
 
 Release 0.3.3-1264 (May 24, 2010)
 =================================
